--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<!doctype html>
 <html>
+
 
     <head>
         <meta charset="utf-8">
@@ -166,7 +168,7 @@
             <section id="Done">
                 <h2>Fait</h2>
                 <ul></ul>
-            </div>
+            </section>
         </main>
         <span id='poubelle' class="material-icons">delete</span>
         <footer>
